--- a/src/registration/locale/ja/LC_MESSAGES/django.po
+++ b/src/registration/locale/ja/LC_MESSAGES/django.po
@@ -212,7 +212,7 @@ msgstr "備考"
 
 #: templates/admin/registration/registrationprofile/change_form.html:6
 msgid "Inspect the registration of %(user)s"
-msgstr "%(user)sの会員登録検証\n"
+msgstr "%(user)sの会員登録検証"
 
 #: templates/admin/registration/registrationprofile/change_form.html:11
 msgid "Please select an action and click the Save button on bottom."
